configs/thelounge/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: irc
  namespace: irc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - irc.kubehomelab.space
    secretName: irc-cert
  rules:
  - host: irc.kubehomelab.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: irc
            port:
              number: 80
